# crossmodal-sequences

./: .gitignore  README.md  TODO.md  TODOs.md  Words_Categories.xlsx  bonus_question.py  control_stim_features.py  demo.py  env.yml  log2csv.py  main.py  pipeline.py  present_stims.py  pyproject.toml  random_distant_sequences.py  recover_crash.py  seq_structure.pkl  seq_structure.py  sequences.py  test.py  test2.py  transLog2csv.py  trigger_log.csv  ~$Words_Categories.xlsx
data/input/instructions/: instr_stim_pres.txt  instructions.txt  question.txt
data/input/instructions/en/: instr_reward.txt  instr_stim_pres.txt  instr_stim_pres2.txt  instr_stim_pres3.txt  instructions_bonus.txt  instructions_bonus2.txt  instructions_bonus3.txt  instructions_p1.txt  instructions_p2.txt  instructions_q.txt  quest_focus.txt  quest_think.txt  quest_vigilance.txt
data/input/instructions/fr/: instr_pause.txt  instr_reward.txt  instr_stim_pres2.txt  instr_stim_pres3.txt  instr_tmr1.txt  instructions_bonus.txt  instructions_bonus2.txt  instructions_bonus3.txt  instructions_p1.txt  instructions_p2.txt  instructions_q.txt  quest_focus.txt  quest_ready.txt  quest_think.txt  quest_vigilance.txt
data/input/word_lists/: Words_Categories.xlsx  two_syllables_words.xlsx
sequences/: bonus_q.py  common.py  flow.py  instr.py  params.py  stimuli_manager.py  utils.py
src/: common.py  flow.py  mock_parallel.py  params.py  stimuli_manager.py
utils/: bonus_q.py  common.py  flow.py  params.py  stimuli_manager.py
