[project]
name = "sequences"
version = "0.1.0"
description = "Tools and scripts for sequence learning experiment"
authors = [
    { name = "Nicolas Piron", email = "nicolas.piron@unige.ch" },
]
requires-python = "==3.10.*"
dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "matplotlib",
    "seaborn",
    "psychopy==2024.*",
    "byte-triggers",
    "ruff"
]
